tdf#117707 Correctly Scale ItemSets when pasting from External

Change-Id: Id01777a786fa7bb75d46ee0f78da645e94f7b840
Reviewed-on: https://gerrit.libreoffice.org/57556
Tested-by: Jenkins
Reviewed-by: Armin Le Grand <Armin.Le.Grand@cib.de>
(cherry picked from commit e244c2c56528dff0d4cfa4e46c3d24ca141bf2be)
Reviewed-on: https://gerrit.libreoffice.org/58439